classDiagram

%% Diagrama de Dominio i Data OdyWay - Sprints 02 i 03

class User {
    +String id
    +String name
    +String username
    +String email
    +String profileImageUrl
    +Long birthDate
    +String login
    +String address
    +String country
    +String phone
    +Boolean acceptEmails
}

class AccessLog {
    +Int id
    +String userId
    +Long timestamp
    +String action
}

class AuthRepository {
    +Flow~User~ currentUser
    +login(email, password)
    +register(email, password, username, fullName)
    +logout()
    +resetPassword(email)
    +sendEmailVerification()
    +isEmailVerified()
}

class Trip {
    +String id
    +String userId
    +String title
    +String destination
    +String status
    +LocalDate startDate
    +LocalDate endDate
    +Double budget
}

class Activity {
    +String id
    +String tripId
    +String title
    +String description
    +String location
    +Double cost
    +isFree()
}

class ItineraryItem {
    +String id
    +String tripId
    +LocalDate date
    +String time
    +String title
    +String location
    +Boolean isCompleted
}

class TripRepository {
    +getAllTrips() Flow~List~Trip~~
    +getTripById(id) Trip
    +addTrip(trip) Result
    +updateTrip(trip) Result
    +deleteTrip(id) Result
}

class ItineraryRepository {
    +getItineraryForTrip(tripId) Flow~List~ItineraryItem~~
    +addItineraryItem(item) Result
    +updateItineraryItem(item) Result
    +deleteItineraryItem(itemId) Result
}

%% Relacions
User "1" --> "many" Trip : owns (FK userId)
User "1" --> "many" AccessLog : generates (FK userId)
AuthRepository --> User : manages auth state

Trip "1" --> "many" Activity : manages expenses
Trip "1" --> "many" ItineraryItem : schedules (FK tripId)

TripRepository --> Trip : CRUD & Validation
ItineraryRepository --> ItineraryItem : CRUD & Reactive Flow